// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`/layouts/default.vue { locale: "en" } snapshot test renders loading 1`] = `
<div>
  <nav role="navigation" aria-label="main navigation" class="navbar is-primary">
    <div class="navbar-brand"><a class="navbar-item"><img src="~assets/logo.svg" alt="DDRadar Logo"> <b>DDRadar</b></a><a role="button" aria-label="menu" tabindex="0" class="navbar-burger burger"><span aria-hidden="true"></span><span aria-hidden="true"></span><span aria-hidden="true"></span></a></div>
    <div class="navbar-menu">
      <div class="navbar-start"><a class="navbar-item">
          Find User
        </a> <a class="navbar-item">
          Score List
        </a>
        <div class="navbar-item has-dropdown is-hidden-mobile is-hoverable"><a aria-haspopup="true" tabindex="0" class="navbar-link">Level(SP)</a>
          <div class="navbar-dropdown" style="display: none;"><a class="navbar-item">
              LEVEL 1
            </a><a class="navbar-item">
              LEVEL 2
            </a><a class="navbar-item">
              LEVEL 3
            </a><a class="navbar-item">
              LEVEL 4
            </a><a class="navbar-item">
              LEVEL 5
            </a><a class="navbar-item">
              LEVEL 6
            </a><a class="navbar-item">
              LEVEL 7
            </a><a class="navbar-item">
              LEVEL 8
            </a><a class="navbar-item">
              LEVEL 9
            </a><a class="navbar-item">
              LEVEL 10
            </a><a class="navbar-item">
              LEVEL 11
            </a><a class="navbar-item">
              LEVEL 12
            </a><a class="navbar-item">
              LEVEL 13
            </a><a class="navbar-item">
              LEVEL 14
            </a><a class="navbar-item">
              LEVEL 15
            </a><a class="navbar-item">
              LEVEL 16
            </a><a class="navbar-item">
              LEVEL 17
            </a><a class="navbar-item">
              LEVEL 18
            </a><a class="navbar-item">
              LEVEL 19
            </a></div>
        </div>
        <div class="navbar-item has-dropdown is-hidden-mobile is-hoverable"><a aria-haspopup="true" tabindex="0" class="navbar-link">Level(DP)</a>
          <div class="navbar-dropdown" style="display: none;"><a class="navbar-item">
              LEVEL 1
            </a><a class="navbar-item">
              LEVEL 2
            </a><a class="navbar-item">
              LEVEL 3
            </a><a class="navbar-item">
              LEVEL 4
            </a><a class="navbar-item">
              LEVEL 5
            </a><a class="navbar-item">
              LEVEL 6
            </a><a class="navbar-item">
              LEVEL 7
            </a><a class="navbar-item">
              LEVEL 8
            </a><a class="navbar-item">
              LEVEL 9
            </a><a class="navbar-item">
              LEVEL 10
            </a><a class="navbar-item">
              LEVEL 11
            </a><a class="navbar-item">
              LEVEL 12
            </a><a class="navbar-item">
              LEVEL 13
            </a><a class="navbar-item">
              LEVEL 14
            </a><a class="navbar-item">
              LEVEL 15
            </a><a class="navbar-item">
              LEVEL 16
            </a><a class="navbar-item">
              LEVEL 17
            </a><a class="navbar-item">
              LEVEL 18
            </a><a class="navbar-item">
              LEVEL 19
            </a></div>
        </div>
        <div class="navbar-item has-dropdown is-hidden-mobile is-hoverable"><a aria-haspopup="true" tabindex="0" class="navbar-link">Version</a>
          <div class="navbar-dropdown" style="display: none;"><a class="navbar-item">
              DanceDanceRevolution A20 PLUS
            </a><a class="navbar-item">
              DanceDanceRevolution A20
            </a><a class="navbar-item">
              DanceDanceRevolution A
            </a><a class="navbar-item">
              DanceDanceRevolution (2014)
            </a><a class="navbar-item">
              DanceDanceRevolution (2013)
            </a><a class="navbar-item">
              DDR X3 VS 2ndMIX
            </a><a class="navbar-item">
              DDR X2
            </a><a class="navbar-item">
              DDR X
            </a><a class="navbar-item">
              DDR SuperNOVA2
            </a><a class="navbar-item">
              DDR SuperNOVA
            </a><a class="navbar-item">
              DDR EXTREME
            </a><a class="navbar-item">
              DDRMAX2
            </a><a class="navbar-item">
              DDRMAX
            </a><a class="navbar-item">
              DDR 5thMIX
            </a><a class="navbar-item">
              DDR 4thMIX
            </a><a class="navbar-item">
              DDR 3rdMIX
            </a><a class="navbar-item">
              DDR 2ndMIX
            </a><a class="navbar-item">
              DDR 1st
            </a></div>
        </div>
        <div class="navbar-item has-dropdown is-hidden-mobile is-hoverable"><a aria-haspopup="true" tabindex="0" class="navbar-link">Courses</a>
          <div class="navbar-dropdown" style="display: none;"><a class="navbar-item">
              NONSTOP(A20)
            </a><a class="navbar-item">
              GRADE(A20)
            </a><a class="navbar-item">
              NONSTOP(A20 PLUS)
            </a><a class="navbar-item">
              GRADE(A20 PLUS)
            </a></div>
        </div> <a class="navbar-item is-hidden-mobile">
          <searchbox-stub></searchbox-stub>
        </a>
      </div>
      <div class="navbar-end">
        <div class="navbar-item has-dropdown"><a aria-haspopup="true" tabindex="0" class="navbar-link"><span><span title="English" class="fi fi-us"></span>
            &nbsp;English
            </span></a>
          <div class="navbar-dropdown is-right" style="display: none;"><a class="navbar-item"><span><span title="日本語" class="fi fi-jp"></span>
              &nbsp;日本語
              </span></a></div>
        </div>
        <div class="navbar-item has-dropdown is-hoverable"><a aria-haspopup="true" tabindex="0" class="navbar-link">User 1</a>
          <div class="navbar-dropdown is-right">
            <div class="navbar-item">
              <div class="buttons"><a type="button" class="button is-info"><span class="icon is-small"><i class="mdi mdi-account"></i></span><span>
              MyPage
            </span>
                  <!---->
                </a> <a type="button" href="/.auth/logout" class="button is-warning">
                  <!----><span>
              Logout
            </span>
                  <!---->
                </a></div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </nav>
  <div>
    <transition-stub name="fade">
      <div class="loading-overlay is-active is-full-page">
        <div class="loading-background"></div>
        <div class="loading-icon"></div>
      </div>
    </transition-stub>
    <nuxt-stub></nuxt-stub>
  </div>
  <footer class="footer">
    <div class="content has-text-centered">
      <p><a>Help</a> | Did you find a bug or have an idea? Please report on <a href="https://twitter.com/nogic1008" target="_blank">
          Twitter
        </a> or <a href="https://github.com/ddradar/ddradar/issues" target="_blank">
          GitHub
        </a>.</p>
    </div>
  </footer>
</div>
`;

exports[`/layouts/default.vue { locale: "en" } snapshot test renders login button if not authed 1`] = `
<div>
  <nav role="navigation" aria-label="main navigation" class="navbar is-primary">
    <div class="navbar-brand"><a class="navbar-item"><img src="~assets/logo.svg" alt="DDRadar Logo"> <b>DDRadar</b></a><a role="button" aria-label="menu" tabindex="0" class="navbar-burger burger"><span aria-hidden="true"></span><span aria-hidden="true"></span><span aria-hidden="true"></span></a></div>
    <div class="navbar-menu">
      <div class="navbar-start"><a class="navbar-item">
          Find User
        </a>
        <!---->
        <div class="navbar-item has-dropdown is-hidden-mobile is-hoverable"><a aria-haspopup="true" tabindex="0" class="navbar-link">Level(SP)</a>
          <div class="navbar-dropdown" style="display: none;"><a class="navbar-item">
              LEVEL 1
            </a><a class="navbar-item">
              LEVEL 2
            </a><a class="navbar-item">
              LEVEL 3
            </a><a class="navbar-item">
              LEVEL 4
            </a><a class="navbar-item">
              LEVEL 5
            </a><a class="navbar-item">
              LEVEL 6
            </a><a class="navbar-item">
              LEVEL 7
            </a><a class="navbar-item">
              LEVEL 8
            </a><a class="navbar-item">
              LEVEL 9
            </a><a class="navbar-item">
              LEVEL 10
            </a><a class="navbar-item">
              LEVEL 11
            </a><a class="navbar-item">
              LEVEL 12
            </a><a class="navbar-item">
              LEVEL 13
            </a><a class="navbar-item">
              LEVEL 14
            </a><a class="navbar-item">
              LEVEL 15
            </a><a class="navbar-item">
              LEVEL 16
            </a><a class="navbar-item">
              LEVEL 17
            </a><a class="navbar-item">
              LEVEL 18
            </a><a class="navbar-item">
              LEVEL 19
            </a></div>
        </div>
        <div class="navbar-item has-dropdown is-hidden-mobile is-hoverable"><a aria-haspopup="true" tabindex="0" class="navbar-link">Level(DP)</a>
          <div class="navbar-dropdown" style="display: none;"><a class="navbar-item">
              LEVEL 1
            </a><a class="navbar-item">
              LEVEL 2
            </a><a class="navbar-item">
              LEVEL 3
            </a><a class="navbar-item">
              LEVEL 4
            </a><a class="navbar-item">
              LEVEL 5
            </a><a class="navbar-item">
              LEVEL 6
            </a><a class="navbar-item">
              LEVEL 7
            </a><a class="navbar-item">
              LEVEL 8
            </a><a class="navbar-item">
              LEVEL 9
            </a><a class="navbar-item">
              LEVEL 10
            </a><a class="navbar-item">
              LEVEL 11
            </a><a class="navbar-item">
              LEVEL 12
            </a><a class="navbar-item">
              LEVEL 13
            </a><a class="navbar-item">
              LEVEL 14
            </a><a class="navbar-item">
              LEVEL 15
            </a><a class="navbar-item">
              LEVEL 16
            </a><a class="navbar-item">
              LEVEL 17
            </a><a class="navbar-item">
              LEVEL 18
            </a><a class="navbar-item">
              LEVEL 19
            </a></div>
        </div>
        <div class="navbar-item has-dropdown is-hidden-mobile is-hoverable"><a aria-haspopup="true" tabindex="0" class="navbar-link">Version</a>
          <div class="navbar-dropdown" style="display: none;"><a class="navbar-item">
              DanceDanceRevolution A20 PLUS
            </a><a class="navbar-item">
              DanceDanceRevolution A20
            </a><a class="navbar-item">
              DanceDanceRevolution A
            </a><a class="navbar-item">
              DanceDanceRevolution (2014)
            </a><a class="navbar-item">
              DanceDanceRevolution (2013)
            </a><a class="navbar-item">
              DDR X3 VS 2ndMIX
            </a><a class="navbar-item">
              DDR X2
            </a><a class="navbar-item">
              DDR X
            </a><a class="navbar-item">
              DDR SuperNOVA2
            </a><a class="navbar-item">
              DDR SuperNOVA
            </a><a class="navbar-item">
              DDR EXTREME
            </a><a class="navbar-item">
              DDRMAX2
            </a><a class="navbar-item">
              DDRMAX
            </a><a class="navbar-item">
              DDR 5thMIX
            </a><a class="navbar-item">
              DDR 4thMIX
            </a><a class="navbar-item">
              DDR 3rdMIX
            </a><a class="navbar-item">
              DDR 2ndMIX
            </a><a class="navbar-item">
              DDR 1st
            </a></div>
        </div>
        <div class="navbar-item has-dropdown is-hidden-mobile is-hoverable"><a aria-haspopup="true" tabindex="0" class="navbar-link">Courses</a>
          <div class="navbar-dropdown" style="display: none;"><a class="navbar-item">
              NONSTOP(A20)
            </a><a class="navbar-item">
              GRADE(A20)
            </a><a class="navbar-item">
              NONSTOP(A20 PLUS)
            </a><a class="navbar-item">
              GRADE(A20 PLUS)
            </a></div>
        </div> <a class="navbar-item is-hidden-mobile">
          <searchbox-stub></searchbox-stub>
        </a>
      </div>
      <div class="navbar-end">
        <div class="navbar-item has-dropdown"><a aria-haspopup="true" tabindex="0" class="navbar-link"><span><span title="English" class="fi fi-us"></span>
            &nbsp;English
            </span></a>
          <div class="navbar-dropdown is-right" style="display: none;"><a class="navbar-item"><span><span title="日本語" class="fi fi-jp"></span>
              &nbsp;日本語
              </span></a></div>
        </div>
        <div class="navbar-item has-dropdown is-hoverable"><a aria-haspopup="true" tabindex="0" class="navbar-link">Login</a>
          <div class="navbar-dropdown is-right">
            <div class="navbar-item">
              <div class="buttons"><a type="button" href="/.auth/login/twitter?post_login_redirect_uri=/" class="button is-info"><span class="icon is-small"><i class="mdi mdi-twitter"></i></span><span>
              Login via Twitter
            </span>
                  <!---->
                </a> <a type="button" href="/.auth/login/github?post_login_redirect_uri=/" class="button is-dark"><span class="icon is-small"><i class="mdi mdi-github"></i></span><span>
              Login via GitHub
            </span>
                  <!---->
                </a></div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </nav>
  <div>
    <transition-stub name="fade">
      <div class="loading-overlay is-active is-full-page" style="display: none;">
        <div class="loading-background"></div>
        <div class="loading-icon"></div>
      </div>
    </transition-stub>
    <nuxt-stub></nuxt-stub>
  </div>
  <footer class="footer">
    <div class="content has-text-centered">
      <p><a>Help</a> | Did you find a bug or have an idea? Please report on <a href="https://twitter.com/nogic1008" target="_blank">
          Twitter
        </a> or <a href="https://github.com/ddradar/ddradar/issues" target="_blank">
          GitHub
        </a>.</p>
    </div>
  </footer>
</div>
`;

exports[`/layouts/default.vue { locale: "en" } snapshot test renders logout button if authed 1`] = `
<div>
  <nav role="navigation" aria-label="main navigation" class="navbar is-primary">
    <div class="navbar-brand"><a class="navbar-item"><img src="~assets/logo.svg" alt="DDRadar Logo"> <b>DDRadar</b></a><a role="button" aria-label="menu" tabindex="0" class="navbar-burger burger"><span aria-hidden="true"></span><span aria-hidden="true"></span><span aria-hidden="true"></span></a></div>
    <div class="navbar-menu">
      <div class="navbar-start"><a class="navbar-item">
          Find User
        </a> <a class="navbar-item">
          Score List
        </a>
        <div class="navbar-item has-dropdown is-hidden-mobile is-hoverable"><a aria-haspopup="true" tabindex="0" class="navbar-link">Level(SP)</a>
          <div class="navbar-dropdown" style="display: none;"><a class="navbar-item">
              LEVEL 1
            </a><a class="navbar-item">
              LEVEL 2
            </a><a class="navbar-item">
              LEVEL 3
            </a><a class="navbar-item">
              LEVEL 4
            </a><a class="navbar-item">
              LEVEL 5
            </a><a class="navbar-item">
              LEVEL 6
            </a><a class="navbar-item">
              LEVEL 7
            </a><a class="navbar-item">
              LEVEL 8
            </a><a class="navbar-item">
              LEVEL 9
            </a><a class="navbar-item">
              LEVEL 10
            </a><a class="navbar-item">
              LEVEL 11
            </a><a class="navbar-item">
              LEVEL 12
            </a><a class="navbar-item">
              LEVEL 13
            </a><a class="navbar-item">
              LEVEL 14
            </a><a class="navbar-item">
              LEVEL 15
            </a><a class="navbar-item">
              LEVEL 16
            </a><a class="navbar-item">
              LEVEL 17
            </a><a class="navbar-item">
              LEVEL 18
            </a><a class="navbar-item">
              LEVEL 19
            </a></div>
        </div>
        <div class="navbar-item has-dropdown is-hidden-mobile is-hoverable"><a aria-haspopup="true" tabindex="0" class="navbar-link">Level(DP)</a>
          <div class="navbar-dropdown" style="display: none;"><a class="navbar-item">
              LEVEL 1
            </a><a class="navbar-item">
              LEVEL 2
            </a><a class="navbar-item">
              LEVEL 3
            </a><a class="navbar-item">
              LEVEL 4
            </a><a class="navbar-item">
              LEVEL 5
            </a><a class="navbar-item">
              LEVEL 6
            </a><a class="navbar-item">
              LEVEL 7
            </a><a class="navbar-item">
              LEVEL 8
            </a><a class="navbar-item">
              LEVEL 9
            </a><a class="navbar-item">
              LEVEL 10
            </a><a class="navbar-item">
              LEVEL 11
            </a><a class="navbar-item">
              LEVEL 12
            </a><a class="navbar-item">
              LEVEL 13
            </a><a class="navbar-item">
              LEVEL 14
            </a><a class="navbar-item">
              LEVEL 15
            </a><a class="navbar-item">
              LEVEL 16
            </a><a class="navbar-item">
              LEVEL 17
            </a><a class="navbar-item">
              LEVEL 18
            </a><a class="navbar-item">
              LEVEL 19
            </a></div>
        </div>
        <div class="navbar-item has-dropdown is-hidden-mobile is-hoverable"><a aria-haspopup="true" tabindex="0" class="navbar-link">Version</a>
          <div class="navbar-dropdown" style="display: none;"><a class="navbar-item">
              DanceDanceRevolution A20 PLUS
            </a><a class="navbar-item">
              DanceDanceRevolution A20
            </a><a class="navbar-item">
              DanceDanceRevolution A
            </a><a class="navbar-item">
              DanceDanceRevolution (2014)
            </a><a class="navbar-item">
              DanceDanceRevolution (2013)
            </a><a class="navbar-item">
              DDR X3 VS 2ndMIX
            </a><a class="navbar-item">
              DDR X2
            </a><a class="navbar-item">
              DDR X
            </a><a class="navbar-item">
              DDR SuperNOVA2
            </a><a class="navbar-item">
              DDR SuperNOVA
            </a><a class="navbar-item">
              DDR EXTREME
            </a><a class="navbar-item">
              DDRMAX2
            </a><a class="navbar-item">
              DDRMAX
            </a><a class="navbar-item">
              DDR 5thMIX
            </a><a class="navbar-item">
              DDR 4thMIX
            </a><a class="navbar-item">
              DDR 3rdMIX
            </a><a class="navbar-item">
              DDR 2ndMIX
            </a><a class="navbar-item">
              DDR 1st
            </a></div>
        </div>
        <div class="navbar-item has-dropdown is-hidden-mobile is-hoverable"><a aria-haspopup="true" tabindex="0" class="navbar-link">Courses</a>
          <div class="navbar-dropdown" style="display: none;"><a class="navbar-item">
              NONSTOP(A20)
            </a><a class="navbar-item">
              GRADE(A20)
            </a><a class="navbar-item">
              NONSTOP(A20 PLUS)
            </a><a class="navbar-item">
              GRADE(A20 PLUS)
            </a></div>
        </div> <a class="navbar-item is-hidden-mobile">
          <searchbox-stub></searchbox-stub>
        </a>
      </div>
      <div class="navbar-end">
        <div class="navbar-item has-dropdown"><a aria-haspopup="true" tabindex="0" class="navbar-link"><span><span title="English" class="fi fi-us"></span>
            &nbsp;English
            </span></a>
          <div class="navbar-dropdown is-right" style="display: none;"><a class="navbar-item"><span><span title="日本語" class="fi fi-jp"></span>
              &nbsp;日本語
              </span></a></div>
        </div>
        <div class="navbar-item has-dropdown is-hoverable"><a aria-haspopup="true" tabindex="0" class="navbar-link">User 1</a>
          <div class="navbar-dropdown is-right">
            <div class="navbar-item">
              <div class="buttons"><a type="button" class="button is-info"><span class="icon is-small"><i class="mdi mdi-account"></i></span><span>
              MyPage
            </span>
                  <!---->
                </a> <a type="button" href="/.auth/logout" class="button is-warning">
                  <!----><span>
              Logout
            </span>
                  <!---->
                </a></div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </nav>
  <div>
    <transition-stub name="fade">
      <div class="loading-overlay is-active is-full-page" style="display: none;">
        <div class="loading-background"></div>
        <div class="loading-icon"></div>
      </div>
    </transition-stub>
    <nuxt-stub></nuxt-stub>
  </div>
  <footer class="footer">
    <div class="content has-text-centered">
      <p><a>Help</a> | Did you find a bug or have an idea? Please report on <a href="https://twitter.com/nogic1008" target="_blank">
          Twitter
        </a> or <a href="https://github.com/ddradar/ddradar/issues" target="_blank">
          GitHub
        </a>.</p>
    </div>
  </footer>
</div>
`;

exports[`/layouts/default.vue { locale: "ja" } snapshot test renders loading 1`] = `
<div>
  <nav role="navigation" aria-label="main navigation" class="navbar is-primary">
    <div class="navbar-brand"><a class="navbar-item"><img src="~assets/logo.svg" alt="DDRadar Logo"> <b>DDRadar</b></a><a role="button" aria-label="menu" tabindex="0" class="navbar-burger burger"><span aria-hidden="true"></span><span aria-hidden="true"></span><span aria-hidden="true"></span></a></div>
    <div class="navbar-menu">
      <div class="navbar-start"><a class="navbar-item">
          ユーザーを探す
        </a> <a class="navbar-item">
          スコア一覧
        </a>
        <div class="navbar-item has-dropdown is-hidden-mobile is-hoverable"><a aria-haspopup="true" tabindex="0" class="navbar-link">レベル(SP)</a>
          <div class="navbar-dropdown" style="display: none;"><a class="navbar-item">
              LEVEL 1
            </a><a class="navbar-item">
              LEVEL 2
            </a><a class="navbar-item">
              LEVEL 3
            </a><a class="navbar-item">
              LEVEL 4
            </a><a class="navbar-item">
              LEVEL 5
            </a><a class="navbar-item">
              LEVEL 6
            </a><a class="navbar-item">
              LEVEL 7
            </a><a class="navbar-item">
              LEVEL 8
            </a><a class="navbar-item">
              LEVEL 9
            </a><a class="navbar-item">
              LEVEL 10
            </a><a class="navbar-item">
              LEVEL 11
            </a><a class="navbar-item">
              LEVEL 12
            </a><a class="navbar-item">
              LEVEL 13
            </a><a class="navbar-item">
              LEVEL 14
            </a><a class="navbar-item">
              LEVEL 15
            </a><a class="navbar-item">
              LEVEL 16
            </a><a class="navbar-item">
              LEVEL 17
            </a><a class="navbar-item">
              LEVEL 18
            </a><a class="navbar-item">
              LEVEL 19
            </a></div>
        </div>
        <div class="navbar-item has-dropdown is-hidden-mobile is-hoverable"><a aria-haspopup="true" tabindex="0" class="navbar-link">レベル(DP)</a>
          <div class="navbar-dropdown" style="display: none;"><a class="navbar-item">
              LEVEL 1
            </a><a class="navbar-item">
              LEVEL 2
            </a><a class="navbar-item">
              LEVEL 3
            </a><a class="navbar-item">
              LEVEL 4
            </a><a class="navbar-item">
              LEVEL 5
            </a><a class="navbar-item">
              LEVEL 6
            </a><a class="navbar-item">
              LEVEL 7
            </a><a class="navbar-item">
              LEVEL 8
            </a><a class="navbar-item">
              LEVEL 9
            </a><a class="navbar-item">
              LEVEL 10
            </a><a class="navbar-item">
              LEVEL 11
            </a><a class="navbar-item">
              LEVEL 12
            </a><a class="navbar-item">
              LEVEL 13
            </a><a class="navbar-item">
              LEVEL 14
            </a><a class="navbar-item">
              LEVEL 15
            </a><a class="navbar-item">
              LEVEL 16
            </a><a class="navbar-item">
              LEVEL 17
            </a><a class="navbar-item">
              LEVEL 18
            </a><a class="navbar-item">
              LEVEL 19
            </a></div>
        </div>
        <div class="navbar-item has-dropdown is-hidden-mobile is-hoverable"><a aria-haspopup="true" tabindex="0" class="navbar-link">バージョン</a>
          <div class="navbar-dropdown" style="display: none;"><a class="navbar-item">
              DanceDanceRevolution A20 PLUS
            </a><a class="navbar-item">
              DanceDanceRevolution A20
            </a><a class="navbar-item">
              DanceDanceRevolution A
            </a><a class="navbar-item">
              DanceDanceRevolution (2014)
            </a><a class="navbar-item">
              DanceDanceRevolution (2013)
            </a><a class="navbar-item">
              DDR X3 VS 2ndMIX
            </a><a class="navbar-item">
              DDR X2
            </a><a class="navbar-item">
              DDR X
            </a><a class="navbar-item">
              DDR SuperNOVA2
            </a><a class="navbar-item">
              DDR SuperNOVA
            </a><a class="navbar-item">
              DDR EXTREME
            </a><a class="navbar-item">
              DDRMAX2
            </a><a class="navbar-item">
              DDRMAX
            </a><a class="navbar-item">
              DDR 5thMIX
            </a><a class="navbar-item">
              DDR 4thMIX
            </a><a class="navbar-item">
              DDR 3rdMIX
            </a><a class="navbar-item">
              DDR 2ndMIX
            </a><a class="navbar-item">
              DDR 1st
            </a></div>
        </div>
        <div class="navbar-item has-dropdown is-hidden-mobile is-hoverable"><a aria-haspopup="true" tabindex="0" class="navbar-link">コース</a>
          <div class="navbar-dropdown" style="display: none;"><a class="navbar-item">
              NONSTOP(A20)
            </a><a class="navbar-item">
              段位認定(A20)
            </a><a class="navbar-item">
              NONSTOP(A20 PLUS)
            </a><a class="navbar-item">
              段位認定(A20 PLUS)
            </a></div>
        </div> <a class="navbar-item is-hidden-mobile">
          <searchbox-stub></searchbox-stub>
        </a>
      </div>
      <div class="navbar-end">
        <div class="navbar-item has-dropdown"><a aria-haspopup="true" tabindex="0" class="navbar-link"><span><span title="日本語" class="fi fi-jp"></span>
            &nbsp;日本語
            </span></a>
          <div class="navbar-dropdown is-right" style="display: none;"><a class="navbar-item"><span><span title="English" class="fi fi-us"></span>
              &nbsp;English
              </span></a></div>
        </div>
        <div class="navbar-item has-dropdown is-hoverable"><a aria-haspopup="true" tabindex="0" class="navbar-link">User 1</a>
          <div class="navbar-dropdown is-right">
            <div class="navbar-item">
              <div class="buttons"><a type="button" class="button is-info"><span class="icon is-small"><i class="mdi mdi-account"></i></span><span>
              マイページ
            </span>
                  <!---->
                </a> <a type="button" href="/.auth/logout" class="button is-warning">
                  <!----><span>
              ログアウト
            </span>
                  <!---->
                </a></div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </nav>
  <div>
    <transition-stub name="fade">
      <div class="loading-overlay is-active is-full-page">
        <div class="loading-background"></div>
        <div class="loading-icon"></div>
      </div>
    </transition-stub>
    <nuxt-stub></nuxt-stub>
  </div>
  <footer class="footer">
    <div class="content has-text-centered">
      <p><a>ヘルプ</a> | 不具合を発見した、または新機能の要望がある場合には、<a href="https://twitter.com/nogic1008" target="_blank">
          作者のTwitter
        </a>または<a href="https://github.com/ddradar/ddradar/issues" target="_blank">
          Githubのissue
        </a>にてご報告ください。</p>
    </div>
  </footer>
</div>
`;

exports[`/layouts/default.vue { locale: "ja" } snapshot test renders login button if not authed 1`] = `
<div>
  <nav role="navigation" aria-label="main navigation" class="navbar is-primary">
    <div class="navbar-brand"><a class="navbar-item"><img src="~assets/logo.svg" alt="DDRadar Logo"> <b>DDRadar</b></a><a role="button" aria-label="menu" tabindex="0" class="navbar-burger burger"><span aria-hidden="true"></span><span aria-hidden="true"></span><span aria-hidden="true"></span></a></div>
    <div class="navbar-menu">
      <div class="navbar-start"><a class="navbar-item">
          ユーザーを探す
        </a>
        <!---->
        <div class="navbar-item has-dropdown is-hidden-mobile is-hoverable"><a aria-haspopup="true" tabindex="0" class="navbar-link">レベル(SP)</a>
          <div class="navbar-dropdown" style="display: none;"><a class="navbar-item">
              LEVEL 1
            </a><a class="navbar-item">
              LEVEL 2
            </a><a class="navbar-item">
              LEVEL 3
            </a><a class="navbar-item">
              LEVEL 4
            </a><a class="navbar-item">
              LEVEL 5
            </a><a class="navbar-item">
              LEVEL 6
            </a><a class="navbar-item">
              LEVEL 7
            </a><a class="navbar-item">
              LEVEL 8
            </a><a class="navbar-item">
              LEVEL 9
            </a><a class="navbar-item">
              LEVEL 10
            </a><a class="navbar-item">
              LEVEL 11
            </a><a class="navbar-item">
              LEVEL 12
            </a><a class="navbar-item">
              LEVEL 13
            </a><a class="navbar-item">
              LEVEL 14
            </a><a class="navbar-item">
              LEVEL 15
            </a><a class="navbar-item">
              LEVEL 16
            </a><a class="navbar-item">
              LEVEL 17
            </a><a class="navbar-item">
              LEVEL 18
            </a><a class="navbar-item">
              LEVEL 19
            </a></div>
        </div>
        <div class="navbar-item has-dropdown is-hidden-mobile is-hoverable"><a aria-haspopup="true" tabindex="0" class="navbar-link">レベル(DP)</a>
          <div class="navbar-dropdown" style="display: none;"><a class="navbar-item">
              LEVEL 1
            </a><a class="navbar-item">
              LEVEL 2
            </a><a class="navbar-item">
              LEVEL 3
            </a><a class="navbar-item">
              LEVEL 4
            </a><a class="navbar-item">
              LEVEL 5
            </a><a class="navbar-item">
              LEVEL 6
            </a><a class="navbar-item">
              LEVEL 7
            </a><a class="navbar-item">
              LEVEL 8
            </a><a class="navbar-item">
              LEVEL 9
            </a><a class="navbar-item">
              LEVEL 10
            </a><a class="navbar-item">
              LEVEL 11
            </a><a class="navbar-item">
              LEVEL 12
            </a><a class="navbar-item">
              LEVEL 13
            </a><a class="navbar-item">
              LEVEL 14
            </a><a class="navbar-item">
              LEVEL 15
            </a><a class="navbar-item">
              LEVEL 16
            </a><a class="navbar-item">
              LEVEL 17
            </a><a class="navbar-item">
              LEVEL 18
            </a><a class="navbar-item">
              LEVEL 19
            </a></div>
        </div>
        <div class="navbar-item has-dropdown is-hidden-mobile is-hoverable"><a aria-haspopup="true" tabindex="0" class="navbar-link">バージョン</a>
          <div class="navbar-dropdown" style="display: none;"><a class="navbar-item">
              DanceDanceRevolution A20 PLUS
            </a><a class="navbar-item">
              DanceDanceRevolution A20
            </a><a class="navbar-item">
              DanceDanceRevolution A
            </a><a class="navbar-item">
              DanceDanceRevolution (2014)
            </a><a class="navbar-item">
              DanceDanceRevolution (2013)
            </a><a class="navbar-item">
              DDR X3 VS 2ndMIX
            </a><a class="navbar-item">
              DDR X2
            </a><a class="navbar-item">
              DDR X
            </a><a class="navbar-item">
              DDR SuperNOVA2
            </a><a class="navbar-item">
              DDR SuperNOVA
            </a><a class="navbar-item">
              DDR EXTREME
            </a><a class="navbar-item">
              DDRMAX2
            </a><a class="navbar-item">
              DDRMAX
            </a><a class="navbar-item">
              DDR 5thMIX
            </a><a class="navbar-item">
              DDR 4thMIX
            </a><a class="navbar-item">
              DDR 3rdMIX
            </a><a class="navbar-item">
              DDR 2ndMIX
            </a><a class="navbar-item">
              DDR 1st
            </a></div>
        </div>
        <div class="navbar-item has-dropdown is-hidden-mobile is-hoverable"><a aria-haspopup="true" tabindex="0" class="navbar-link">コース</a>
          <div class="navbar-dropdown" style="display: none;"><a class="navbar-item">
              NONSTOP(A20)
            </a><a class="navbar-item">
              段位認定(A20)
            </a><a class="navbar-item">
              NONSTOP(A20 PLUS)
            </a><a class="navbar-item">
              段位認定(A20 PLUS)
            </a></div>
        </div> <a class="navbar-item is-hidden-mobile">
          <searchbox-stub></searchbox-stub>
        </a>
      </div>
      <div class="navbar-end">
        <div class="navbar-item has-dropdown"><a aria-haspopup="true" tabindex="0" class="navbar-link"><span><span title="日本語" class="fi fi-jp"></span>
            &nbsp;日本語
            </span></a>
          <div class="navbar-dropdown is-right" style="display: none;"><a class="navbar-item"><span><span title="English" class="fi fi-us"></span>
              &nbsp;English
              </span></a></div>
        </div>
        <div class="navbar-item has-dropdown is-hoverable"><a aria-haspopup="true" tabindex="0" class="navbar-link">ログイン</a>
          <div class="navbar-dropdown is-right">
            <div class="navbar-item">
              <div class="buttons"><a type="button" href="/.auth/login/twitter?post_login_redirect_uri=/" class="button is-info"><span class="icon is-small"><i class="mdi mdi-twitter"></i></span><span>
              Twitterでログイン
            </span>
                  <!---->
                </a> <a type="button" href="/.auth/login/github?post_login_redirect_uri=/" class="button is-dark"><span class="icon is-small"><i class="mdi mdi-github"></i></span><span>
              GitHubでログイン
            </span>
                  <!---->
                </a></div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </nav>
  <div>
    <transition-stub name="fade">
      <div class="loading-overlay is-active is-full-page" style="display: none;">
        <div class="loading-background"></div>
        <div class="loading-icon"></div>
      </div>
    </transition-stub>
    <nuxt-stub></nuxt-stub>
  </div>
  <footer class="footer">
    <div class="content has-text-centered">
      <p><a>ヘルプ</a> | 不具合を発見した、または新機能の要望がある場合には、<a href="https://twitter.com/nogic1008" target="_blank">
          作者のTwitter
        </a>または<a href="https://github.com/ddradar/ddradar/issues" target="_blank">
          Githubのissue
        </a>にてご報告ください。</p>
    </div>
  </footer>
</div>
`;

exports[`/layouts/default.vue { locale: "ja" } snapshot test renders logout button if authed 1`] = `
<div>
  <nav role="navigation" aria-label="main navigation" class="navbar is-primary">
    <div class="navbar-brand"><a class="navbar-item"><img src="~assets/logo.svg" alt="DDRadar Logo"> <b>DDRadar</b></a><a role="button" aria-label="menu" tabindex="0" class="navbar-burger burger"><span aria-hidden="true"></span><span aria-hidden="true"></span><span aria-hidden="true"></span></a></div>
    <div class="navbar-menu">
      <div class="navbar-start"><a class="navbar-item">
          ユーザーを探す
        </a> <a class="navbar-item">
          スコア一覧
        </a>
        <div class="navbar-item has-dropdown is-hidden-mobile is-hoverable"><a aria-haspopup="true" tabindex="0" class="navbar-link">レベル(SP)</a>
          <div class="navbar-dropdown" style="display: none;"><a class="navbar-item">
              LEVEL 1
            </a><a class="navbar-item">
              LEVEL 2
            </a><a class="navbar-item">
              LEVEL 3
            </a><a class="navbar-item">
              LEVEL 4
            </a><a class="navbar-item">
              LEVEL 5
            </a><a class="navbar-item">
              LEVEL 6
            </a><a class="navbar-item">
              LEVEL 7
            </a><a class="navbar-item">
              LEVEL 8
            </a><a class="navbar-item">
              LEVEL 9
            </a><a class="navbar-item">
              LEVEL 10
            </a><a class="navbar-item">
              LEVEL 11
            </a><a class="navbar-item">
              LEVEL 12
            </a><a class="navbar-item">
              LEVEL 13
            </a><a class="navbar-item">
              LEVEL 14
            </a><a class="navbar-item">
              LEVEL 15
            </a><a class="navbar-item">
              LEVEL 16
            </a><a class="navbar-item">
              LEVEL 17
            </a><a class="navbar-item">
              LEVEL 18
            </a><a class="navbar-item">
              LEVEL 19
            </a></div>
        </div>
        <div class="navbar-item has-dropdown is-hidden-mobile is-hoverable"><a aria-haspopup="true" tabindex="0" class="navbar-link">レベル(DP)</a>
          <div class="navbar-dropdown" style="display: none;"><a class="navbar-item">
              LEVEL 1
            </a><a class="navbar-item">
              LEVEL 2
            </a><a class="navbar-item">
              LEVEL 3
            </a><a class="navbar-item">
              LEVEL 4
            </a><a class="navbar-item">
              LEVEL 5
            </a><a class="navbar-item">
              LEVEL 6
            </a><a class="navbar-item">
              LEVEL 7
            </a><a class="navbar-item">
              LEVEL 8
            </a><a class="navbar-item">
              LEVEL 9
            </a><a class="navbar-item">
              LEVEL 10
            </a><a class="navbar-item">
              LEVEL 11
            </a><a class="navbar-item">
              LEVEL 12
            </a><a class="navbar-item">
              LEVEL 13
            </a><a class="navbar-item">
              LEVEL 14
            </a><a class="navbar-item">
              LEVEL 15
            </a><a class="navbar-item">
              LEVEL 16
            </a><a class="navbar-item">
              LEVEL 17
            </a><a class="navbar-item">
              LEVEL 18
            </a><a class="navbar-item">
              LEVEL 19
            </a></div>
        </div>
        <div class="navbar-item has-dropdown is-hidden-mobile is-hoverable"><a aria-haspopup="true" tabindex="0" class="navbar-link">バージョン</a>
          <div class="navbar-dropdown" style="display: none;"><a class="navbar-item">
              DanceDanceRevolution A20 PLUS
            </a><a class="navbar-item">
              DanceDanceRevolution A20
            </a><a class="navbar-item">
              DanceDanceRevolution A
            </a><a class="navbar-item">
              DanceDanceRevolution (2014)
            </a><a class="navbar-item">
              DanceDanceRevolution (2013)
            </a><a class="navbar-item">
              DDR X3 VS 2ndMIX
            </a><a class="navbar-item">
              DDR X2
            </a><a class="navbar-item">
              DDR X
            </a><a class="navbar-item">
              DDR SuperNOVA2
            </a><a class="navbar-item">
              DDR SuperNOVA
            </a><a class="navbar-item">
              DDR EXTREME
            </a><a class="navbar-item">
              DDRMAX2
            </a><a class="navbar-item">
              DDRMAX
            </a><a class="navbar-item">
              DDR 5thMIX
            </a><a class="navbar-item">
              DDR 4thMIX
            </a><a class="navbar-item">
              DDR 3rdMIX
            </a><a class="navbar-item">
              DDR 2ndMIX
            </a><a class="navbar-item">
              DDR 1st
            </a></div>
        </div>
        <div class="navbar-item has-dropdown is-hidden-mobile is-hoverable"><a aria-haspopup="true" tabindex="0" class="navbar-link">コース</a>
          <div class="navbar-dropdown" style="display: none;"><a class="navbar-item">
              NONSTOP(A20)
            </a><a class="navbar-item">
              段位認定(A20)
            </a><a class="navbar-item">
              NONSTOP(A20 PLUS)
            </a><a class="navbar-item">
              段位認定(A20 PLUS)
            </a></div>
        </div> <a class="navbar-item is-hidden-mobile">
          <searchbox-stub></searchbox-stub>
        </a>
      </div>
      <div class="navbar-end">
        <div class="navbar-item has-dropdown"><a aria-haspopup="true" tabindex="0" class="navbar-link"><span><span title="日本語" class="fi fi-jp"></span>
            &nbsp;日本語
            </span></a>
          <div class="navbar-dropdown is-right" style="display: none;"><a class="navbar-item"><span><span title="English" class="fi fi-us"></span>
              &nbsp;English
              </span></a></div>
        </div>
        <div class="navbar-item has-dropdown is-hoverable"><a aria-haspopup="true" tabindex="0" class="navbar-link">User 1</a>
          <div class="navbar-dropdown is-right">
            <div class="navbar-item">
              <div class="buttons"><a type="button" class="button is-info"><span class="icon is-small"><i class="mdi mdi-account"></i></span><span>
              マイページ
            </span>
                  <!---->
                </a> <a type="button" href="/.auth/logout" class="button is-warning">
                  <!----><span>
              ログアウト
            </span>
                  <!---->
                </a></div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </nav>
  <div>
    <transition-stub name="fade">
      <div class="loading-overlay is-active is-full-page" style="display: none;">
        <div class="loading-background"></div>
        <div class="loading-icon"></div>
      </div>
    </transition-stub>
    <nuxt-stub></nuxt-stub>
  </div>
  <footer class="footer">
    <div class="content has-text-centered">
      <p><a>ヘルプ</a> | 不具合を発見した、または新機能の要望がある場合には、<a href="https://twitter.com/nogic1008" target="_blank">
          作者のTwitter
        </a>または<a href="https://github.com/ddradar/ddradar/issues" target="_blank">
          Githubのissue
        </a>にてご報告ください。</p>
    </div>
  </footer>
</div>
`;
